# atom

./: .bazelrc  .editorconfig  .gitignore  .ruff.toml  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  SPEC.md  WORKFLOW.md  clippy.toml  install.sh  mise.toml  package.json  pnpm-lock.yaml  prettier.config.mjs  rustfmt.toml
.agents/skills/architecture-review/: SKILL.md
.agents/skills/code-verification/: SKILL.md
.agents/skills/destination-discovery/: SKILL.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/evidence-capture/: SKILL.md
.agents/skills/examples-auto-run/: SKILL.md
.codex/rules/: default.rules
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  settings.yml
.github/workflows/: ci.yml  cli-binary.yml  github-release.yml
.mise/tasks/: android  bootstrap  ci  fmt  fmt-check  ios  lint  pre-commit  pre-push  sync-hooks  test
bzl/atom/: BUILD.bazel  atom_app.bzl  atom_module.bzl  atom_native_module.bzl  defs.bzl
crates/atom-analytics/: BUILD.bazel
crates/atom-analytics/src/: lib.rs
crates/atom-backend-android/: BUILD.bazel
crates/atom-backend-android-jvm-debug/: BUILD.bazel
crates/atom-backend-android-jvm-debug/src/: lib.rs
crates/atom-backend-android-native-debug/: BUILD.bazel
crates/atom-backend-android-native-debug/src/: lib.rs  native_lldb_helper.py
crates/atom-backend-android/src/: agent_device.rs  android_uiautomator.rs  cng.rs  deploy.rs  doctor.rs  lib.rs  templates.rs
crates/atom-backend-android/src/templates/android/: AndroidManifest.xml.j2  AtomApplication.kt.j2  AtomBindings.kt.j2  BUILD.bazel.j2  MainActivity.kt.j2  atom_runtime_jni.rs.j2
crates/atom-backend-ios/: BUILD.bazel
crates/atom-backend-ios-debug/: BUILD.bazel
crates/atom-backend-ios-debug/src/: lib.rs
crates/atom-backend-ios/src/: agent_device.rs  cng.rs  debug_session_helper.py  deploy.rs  doctor.rs  lib.rs  templates.rs
crates/atom-backend-ios/src/templates/ios/: AtomAppDelegate.swift  AtomBindings.swift.j2  BUILD.bazel.j2  LaunchScreen.storyboard  atom_runtime_app_bridge.rs.j2  main.swift
crates/atom-backends/: BUILD.bazel
crates/atom-backends/src/: cng.rs  deploy.rs  doctor.rs  lib.rs
crates/atom-cli/: BUILD.bazel  build_info.env
crates/atom-cli/src/: deploy.rs  doctor.rs  lib.rs  main.rs  new_project.rs  templates.rs  tools.rs
crates/atom-cli/src/devices/: android.rs  ios.rs  mod.rs
crates/atom-cli/src/templates/project/: BUILD.bazel.j2  MODULE.bazel.j2  README.md.j2  bazelrc.j2  bazelversion.j2  gitignore.j2  mise.toml.j2
crates/atom-cli/src/templates/project/apps/app/: BUILD.bazel.j2
crates/atom-cli/src/templates/project/apps/app/src/: lib.rs.j2
crates/atom-cli/tests/: cli.rs
crates/atom-cng/: BUILD.bazel
crates/atom-cng-app-icon/: BUILD.bazel  defs.bzl
crates/atom-cng-app-icon/src/: lib.rs
crates/atom-cng/src/: android.rs  backends.rs  bridge.rs  emit.rs  ios.rs  lib.rs  module_flatbuffers.rs  rust_source.rs  templates.rs
crates/atom-cng/src/templates/android/: AndroidManifest.xml.j2  AtomApplication.kt.j2  BUILD.bazel.j2  MainActivity.kt.j2
crates/atom-cng/src/templates/flatbuffers/: BUILD.bazel.j2  lib.rs.j2  module.fbs.j2
crates/atom-cng/src/templates/ios/: AtomAppDelegate.swift  AtomBindings.swift.j2  BUILD.bazel.j2  Info.generated.plist.j2  SceneDelegate.swift.j2  atom_runtime.h  atom_runtime_app_bridge.rs.j2
crates/atom-cng/src/templates/schema/: atom.fbs.j2
crates/atom-deploy/: BUILD.bazel
crates/atom-deploy/src/: debugger.rs  deploy.rs  destinations.rs  evaluate.rs  lib.rs  progress.rs  tools.rs
crates/atom-deploy/src/backends/: android.rs  ios.rs  mod.rs
crates/atom-deploy/src/devices/: android.rs  ios.rs  mod.rs
crates/atom-deploy/src/evaluate/: android_uiautomator.rs
crates/atom-ffi/: BUILD.bazel
crates/atom-ffi/src/: lib.rs
crates/atom-macros/: BUILD.bazel
crates/atom-macros/src/: expand.rs  lib.rs
crates/atom-macros/tests/: integration.rs
crates/atom-manifest/: BUILD.bazel
crates/atom-manifest/src/: bazel.rs  lib.rs  testing.rs  validate.rs
crates/atom-modules/: BUILD.bazel
crates/atom-modules/src/: graph.rs  lib.rs  loader.rs  testing.rs
crates/atom-navigation/: BUILD.bazel
crates/atom-navigation/src/: lib.rs
crates/atom-runtime/: BUILD.bazel
crates/atom-runtime/include/: atom_runtime.h
crates/atom-runtime/src/: config.rs  ffi.rs  kernel.rs  lib.rs  logging.rs  plugin.rs  registry.rs  state.rs  store.rs
docs/: README.md  architecture.md  core-beliefs.md  getting-started.md  harness.md  plan.md
docs/design-docs/: 0001-bazel-first.md  0002-flatbuffers-ffi.md  README.md
examples/hello-world/: MODULE.bazel  README.md
examples/hello-world/apps/hello_atom/: BUILD.bazel
examples/hello-world/apps/hello_atom/assets/AppIcon.icon/: icon.json
examples/hello-world/apps/hello_atom/src/: lib.rs
examples/hello-world/modules/device_info/: BUILD.bazel
examples/hello-world/modules/device_info/android/: DeviceInfoModule.kt
examples/hello-world/modules/device_info/ios/: DeviceInfoModule.swift
examples/hello-world/modules/device_info/schema/: device_info.fbs
examples/hello-world/modules/device_info/src/: lib.rs
examples/hello-world/modules/native_echo/: BUILD.bazel
examples/hello-world/modules/native_echo/android/: NativeEchoModule.kt
examples/hello-world/modules/native_echo/ios/: NativeEchoModule.swift
examples/hello-world/modules/native_echo/schema/: native_echo.fbs
examples/hello-world/plugins/lifecycle_logger/: BUILD.bazel
examples/hello-world/plugins/lifecycle_logger/src/: lib.rs
scripts/: bootstrap.sh  check-generic-backend-leaks.sh  install-hooks.sh  pre-commit.sh  pre-push.sh  setup-agent-device.sh  setup-android-sdk.sh  setup-buildbuddy.sh  setup-idb.sh  verify-scaffold-project.sh  verify.sh  workspace-status.sh
templates/android/: README.md
templates/atom_runtime_jni/: BUILD.bazel  lib.rs
templates/ios/: README.md
tools/bzlmod/: BUILD.bazel  BUILD.ndk_root.empty.tpl  android_ndk_repository_extension.bzl
tools/install/: BUILD.bazel  test_install_sh.sh
tools/lint/: BUILD.bazel  linters.bzl
(+45 files in other folders)
