load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:prettier/package_json.bzl", prettier = "bin")
load("@rules_java//java:defs.bzl", "java_binary")

npm_link_all_packages()

exports_files([
    "clippy.toml",
    "install.sh",
    "rustfmt.toml",
])

alias(
    name = "prettierrc",
    actual = "prettier.config.mjs",
)

prettier.prettier_binary(
    name = "prettier",
    data = [":prettierrc"],
    env = {"BAZEL_BINDIR": "."},
    fixed_args = [
        "--config=\"$$JS_BINARY__RUNFILES\"/$(rlocationpath :prettierrc)",
        "--log-level=warn",
    ],
)

alias(
    name = "swiftformat",
    actual = select({
        "@bazel_tools//src/conditions:linux": "@swiftformat",
        "@bazel_tools//src/conditions:darwin": "@swiftformat_mac",
    }),
)

java_binary(
    name = "ktfmt",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = ["@ktfmt//jar"],
)

format_multirun(
    name = "format",
    kotlin = ":ktfmt",
    markdown = ":prettier",
    rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    swift = ":swiftformat",
)

alias(
    name = "atom",
    actual = "//crates/atom-cli:atom",
)
