load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-backend-android-native-debug",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["src/native_lldb_helper.py"],
    crate_name = "atom_backend_android_native_debug",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-backends",
        "//crates/atom-ffi",
        "@crates//:camino",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "atom-backend-android-native-debug-test",
    crate = ":atom-backend-android-native-debug",
    deps = [
        "@crates//:tempfile",
    ],
)
