load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-backend-android",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["src/templates/**"]),
    crate_name = "atom_backend_android",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-backend-android-jvm-debug",
        "//crates/atom-backend-android-native-debug",
        "//crates/atom-backends",
        "//crates/atom-cng",
        "//crates/atom-deploy",
        "//crates/atom-ffi",
        "//crates/atom-manifest",
        "//crates/atom-modules",
        "@crates//:camino",
        "@crates//:minijinja",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "atom-backend-android-test",
    crate = ":atom-backend-android",
    deps = [
        "@crates//:tempfile",
    ],
)
