load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-backends",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "atom_backends",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-ffi",
    ],
)

rust_test(
    name = "atom-backends-test",
    crate = ":atom-backends",
)
