load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-cng-app-icon",
    srcs = ["src/lib.rs"],
    crate_name = "atom_cng_app_icon",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-cng",
        "//crates/atom-ffi",
        "//crates/atom-manifest",
        "@crates//:camino",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "atom-cng-app-icon-test",
    crate = ":atom-cng-app-icon",
    deps = [
        "@crates//:tempfile",
    ],
)
