load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-deploy",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "atom_deploy",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-backends",
        "//crates/atom-ffi",
        "//crates/atom-manifest",
        "@crates//:camino",
        "@crates//:console",
        "@crates//:dialoguer",
        "@crates//:indicatif",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "atom-deploy-test",
    crate = ":atom-deploy",
    deps = [
        "@crates//:tempfile",
    ],
)
