load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "atom-navigation",
    srcs = ["src/lib.rs"],
    crate_name = "atom_navigation",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-runtime",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "atom-navigation-test",
    crate = ":atom-navigation",
)
