load("@build_bazel_rules_swift//swift:swift_interop_hint.bzl", "swift_interop_hint")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_static_library", "rust_test")

RUNTIME_DEPS = [
    "//crates/atom-ffi",
    "@crates//:tokio",
    "@crates//:tracing",
    "@crates//:tracing-subscriber",
] + select({
    "@platforms//os:android": ["@crates//:tracing-android"],
    "//conditions:default": [],
})

rust_library(
    name = "atom-runtime",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "atom_runtime",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = RUNTIME_DEPS,
)

rust_static_library(
    name = "atom-runtime-static",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "atom_runtime",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = RUNTIME_DEPS,
)

swift_interop_hint(
    name = "atom_runtime_swift_hint",
    module_name = "AtomRuntimeBridge",
)

cc_library(
    name = "atom-runtime-swift-bridge",
    hdrs = ["include/atom_runtime.h"],
    aspect_hints = [":atom_runtime_swift_hint"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":atom-runtime-static",
    ],
)

rust_test(
    name = "atom-runtime-test",
    crate = ":atom-runtime",
)
