load("@atom//bzl/atom:defs.bzl", "atom_app")
load("@atom//crates/atom-cng-app-icon:defs.bzl", "atom_app_icon")

atom_app(
    name = "hello_atom",
    android_application_id = "build.atom.hello",
    android_min_sdk = 28,
    android_target_sdk = 35,
    app_name = "Hello Atom",
    automation_fixture = True,
    config_plugins = [
        atom_app_icon(
            android = "assets/ic_launcher.png",
            android_min_sdk = 28,
            ios = "assets/AppIcon.icon",
            ios_min_deployment_target = "18.0",
            min_atom_version = "0.1.0",
        ),
    ],
    generated_root = "cng-output",
    ios_bundle_id = "build.atom.hello",
    ios_deployment_target = "18.0",
    modules = [
        "//examples/hello-world/modules/device_info:device_info",
        "//examples/hello-world/modules/native_echo:native_echo",
    ],
    slug = "hello-atom",
    deps = [
        "//crates/atom-analytics",
        "//crates/atom-navigation",
        "//crates/atom-runtime",
        "//examples/hello-world/modules/device_info",
        "//examples/hello-world/plugins/lifecycle_logger",
    ],
)
