load("@atom//bzl/atom:defs.bzl", "atom_module")
load("@rules_rust//rust:defs.bzl", "rust_test")

atom_module(
    name = "device_info",
    android_srcs = ["android/DeviceInfoModule.kt"],
    ios_srcs = ["ios/DeviceInfoModule.swift"],
    methods = [
        {
            "name": "get",
            "request_table": "atom.device_info.GetDeviceInfoRequest",
            "response_table": "atom.device_info.GetDeviceInfoResponse",
        },
    ],
    schema_files = ["schema/device_info.fbs"],
    deps = [],
)

rust_test(
    name = "device_info-test",
    crate = ":device_info",
)
