load("@atom//bzl/atom:defs.bzl", "atom_module")
load("@rules_rust//rust:defs.bzl", "rust_test")

atom_module(
    name = "device_info",
    android_srcs = ["android/DeviceInfoModule.kt"],
    ios_srcs = ["ios/DeviceInfoModule.swift"],
    proc_macro_deps = ["//crates/atom-macros"],
    deps = [
        "//crates/atom-ffi",
        "//crates/atom-runtime",
        "@crates//:flatbuffers",
    ],
)

rust_test(
    name = "device_info-test",
    crate = ":device_info",
)
