load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "lifecycle_logger",
    srcs = ["src/lib.rs"],
    crate_name = "hello_world_lifecycle_logger",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/atom-ffi",
        "//crates/atom-runtime",
        "//examples/hello-world/modules/device_info",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)
